Adding shutdown hook to stop monitoring thread